freebsd-utils (9.2-3) UNRELEASED; urgency=low

  * Drop freebsd-geom transitional package.

 -- Robert Millan <rmh@debian.org>  Sun, 01 Dec 2013 20:31:39 +0100

freebsd-utils (9.2-2) unstable; urgency=low

  [ Robert Millan ]
  * Simplify 031_savecore.diff by using zopen() from freebsd-glue.
  * Enable ifmac.c, iffib.c and ifpfsync.c in ifconfig.
    (Closes: #728374)
  * Remove cons25 transition kludge (was only needed for squeeze->wheezy
    upgrades).
  * Fix permissions for /dev/dri/card* devices.
  * Remove a few gratuitous library dependencies.
  * Misc patchset cleanup.
  * Remove kludge in jail(8). Use libutil-freebsd-dev to satisfy
    login_cap.h dependency instead.
  * Require freebsd-glue >= 0.2.4 to ensure trimdomain from libutil is
    used (rather than the static version in freebsd-glue << 0.2.4).
  * Remove kludge in ppp(8) to use liblockdev. Use libutil directly like
    upstream does.  (Closes: 728019)

  [ Guillem Jover ]
  * Remove myself from Uploaders.

 -- Robert Millan <rmh@debian.org>  Sun, 01 Dec 2013 13:34:11 +0100

freebsd-utils (9.2-1) unstable; urgency=low

  * New upstream release.
    - Refresh all patches.
    - Bump B-D on freebsd-glue and libcam-dev.

  [ Robert Millan ]
  * Misc adjustments for freebsd-glue 0.1.0.
  * Reduce the patchset even further by using trimdomain, link_addr and
    link_ntoa from freebsd-glue.
  * Improve output formatting in nfsiod init script. Thanks Mats Erik
    Andersson. (Closes: #721446)

 -- Robert Millan <rmh@debian.org>  Thu, 03 Oct 2013 01:21:38 +0200

freebsd-utils (9.1-4) unstable; urgency=high

  * Bump urgency due to #718490.

 -- Robert Millan <rmh@debian.org>  Fri, 02 Aug 2013 22:49:01 +0200

freebsd-utils (9.1-3) unstable; urgency=low

  [ Guillem Jover ]
  * Switch to canonical Vcs URLs.

  [ Petr Salinger ]
  * Add #include <netinet/ether.h> into lib/linkaddr.h.

  [ Robert Millan ]
  * Re-enable -Werror=implicit-function-declaration.